Fixed layout height and sidebar scroll on mobile devices

--- a/Pages/Dashboard-Client/styles.css
+++ b/Pages/Dashboard-Client/styles.css
@@ -108,8 +108,9 @@ hr {
 
 .sidebar {
   color: var(--color-text2);
-  overflow-x: hidden !important;
+  overflow: hidden !important;
   position: relative;
+  -webkit-overflow-scrolling: touch;
   -webkit-box-shadow: 9px -1px 33px -5px rgba(0, 0, 0, 0.35);
   -moz-box-shadow: 9px -1px 33px -5px rgba(0, 0, 0, 0.35);
   box-shadow: 9px -1px 33px -5px rgba(0, 0, 0, 0.35);
@@ -151,8 +152,11 @@ hr {
 }
 
 .sidebar .sidebar-layout {
-  height: auto;
+  height: 100%;
+  max-height: 100%;
   min-height: 100%;
+  min-height: 100%;
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
   position: relative;
@@ -633,6 +637,7 @@ hr {
   justify-content: flex-start;
   align-content: flex-start;
   gap: 50px;
+  margin-bottom: 75px;
 }
 
 .server-card {
